[package]
name = "Stomping_section"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug_output = []

[dependencies]
windows = { version = "0.62.1", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
]}
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false
debug-assertions = false