[package]
name = "module-stomping"
version = "0.2.0"
edition = "2021"
description = "Module Stomping with Just-In-Time shellcode decryption for security research"
authors = ["3xploit666"]
license = "MIT"

[features]
default = []
debug_output = []

[dependencies]
windows = { version = "0.62.1", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false
debug-assertions = false
